welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: reassignment to val
	if (negative=true){
                    ^posNeg:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if (a < 0 || b < 0)
                ^